<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_cart_shop"
            android:icon="@drawable/ic_shop_black"
            android:title="Carrito" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_list_black"
            android:title="Historial"
            android:visible="false"/>

        <item android:title="Cuenta"
            android:id="@+id/menu_cuenta">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/ic_person"
                        android:title="@string/profile" />
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_exit"
                        android:title="@string/logout"
                        android:visible="false"/>
                </group>
            </menu>
        </item>
    </group>
</menu>